--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   border: none;
   width: 100%;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 50px;
   padding-top: 13px;
   padding-bottom: 13px;
 }
@@ -77,4 +77,143 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+.slide {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 100px;
+}
+.slide-content {
+  position: relative;
+  max-width: 400px;
+}
+.slide-text-light {
+  background-color: gray;
+  color: white;
+}
+.slide-title {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 51px;
+}
+.slide-text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+.button-primary {
+  background-color: #f47322;
+  color: white;
+}
+.button-default {
+  background-color: #fff;
+  color: #5f5f61;
+}
+.button {
+  border-radius: 25px;
+  padding: 12px 50px;
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+}
+.slide-summer {
+  background-image: url(../img/bgsummer.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.43) 40.45%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+.promo {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  padding: 32px;
+  max-width: 570px;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.card::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+.card-text-light {
+  color: #fff;
+}
+.card-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
+}
+.card-descr {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  max-width: 164px;
+}
+.card-price {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
+}
+.card-delivery {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
+}
+.sweet-busket {
+  z-index: -1;
+  width: 100%;
+
+  background: url(../img/sweet-busket.png) no-repeat center / cover;
+}
+.min-force {
+  z-index: -1;
+  width: 100%;
+
+  background: url(../img/min-force.png) no-repeat center / cover;
 }
